--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.neil.miruhiru">
 
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
     <application
@@ -17,6 +17,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MiruHiru"
         tools:targetApi="31">
+        <activity
+            android:name=".MainActivitytwo"
+            android:exported="false"
+            android:label="@string/title_activity_main_activitytwo"
+            android:theme="@style/Theme.MiruHiru.NoActionBar" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
