--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,4 +86,7 @@ dependencies {
     // QR Generator
     implementation 'com.journeyapps:zxing-android-embedded:4.3.0'
 
+    // Scanner
+//    implementation 'com.budiyev.android:code-scanner:2.1.0'
+
 }
