--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,6 +87,6 @@ dependencies {
     implementation 'com.journeyapps:zxing-android-embedded:4.3.0'
 
     // Scanner
-//    implementation 'com.budiyev.android:code-scanner:2.1.0'
+    implementation 'com.github.yuriy-budiyev:code-scanner:2.3.2'
 
 }
