--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,4 +89,7 @@ dependencies {
     // Scanner
     implementation 'com.github.yuriy-budiyev:code-scanner:2.3.2'
 
+    // Timber
+    implementation 'com.jakewharton.timber:timber:5.0.1'
+
 }
