--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
     <application
+        android:name=".MiruHiruApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -17,11 +18,6 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MiruHiru"
         tools:targetApi="31">
-        <activity
-            android:name=".MainActivitytwo"
-            android:exported="false"
-            android:label="@string/title_activity_main_activitytwo"
-            android:theme="@style/Theme.MiruHiru.NoActionBar" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
