--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,11 +64,11 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
+    implementation 'com.google.android.gms:play-services-location:18.0.0'
     // Mapbox dependencies
     implementation 'com.mapbox.maps:android:10.9.0'
 //    implementation 'com.mapbox.mapboxsdk:mapbox-android-sdk:6.6.1'
 //    implementation 'com.mapbox.mapboxsdk:mapbox-android-plugin-locationlayer:0.11.0'
-    implementation 'com.google.android.gms:play-services-location:18.0.0'
 //    implementation 'com.mapbox.mapboxsdk:mapbox-android-navigation:0.13.0'
 //    implementation('com.mapbox.mapboxsdk:mapbox-android-navigation:0.13.0') {
 //        transitive = true
@@ -78,7 +78,6 @@ dependencies {
     // navigation
     implementation("androidx.navigation:navigation-fragment-ktx:2.5.3")
     implementation("androidx.navigation:navigation-ui-ktx:2.5.3")
-
 
     // Glide
     implementation "com.github.bumptech.glide:glide:$version_glide"
@@ -99,5 +98,14 @@ dependencies {
     // Google Login
     implementation 'com.google.android.gms:play-services-auth:20.3.0'
 
+    // Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation "com.squareup.retrofit2:converter-scalars:2.9.0"
+    implementation 'com.squareup.okhttp3:okhttp:4.9.2'
+
+    // Moshi
+    implementation "com.squareup.moshi:moshi:1.13.0"
+    implementation "com.squareup.moshi:moshi-kotlin:1.13.0"
+    implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
 
 }
