--- a/app/build.gradle
+++ b/app/build.gradle
@@ -108,4 +108,7 @@ dependencies {
     implementation "com.squareup.moshi:moshi-kotlin:1.13.0"
     implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
 
+    // Banner View Pager
+    implementation 'com.github.zhpanvip:bannerviewpager:3.5.8'
+
 }
