finish report feature

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -111,4 +111,10 @@ dependencies {
     // Banner View Pager
     implementation 'com.github.zhpanvip:bannerviewpager:3.5.8'
 
+    // Lottie
+    implementation 'com.airbnb.android:lottie:5.2.0'
+
+    // Fluid Bottom Navigation
+    implementation 'com.github.10clouds:FluidBottomNavigation-android:1.2'
+
 }
