--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,7 @@ plugins {
     id 'androidx.navigation.safeargs.kotlin'
     id 'com.google.gms.google-services'
     id 'kotlin-parcelize'
+    id("kotlin-kapt")
     id 'com.google.firebase.crashlytics'
 }
 
@@ -120,4 +121,7 @@ dependencies {
     // Spotlight
     implementation 'com.github.takusemba:spotlight:2.0.5'
 
+    // Room and Lifecycle dependencies
+    implementation "androidx.room:room-runtime:$version_room"
+    kapt "androidx.room:room-compiler:$version_room"
 }
