--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
         version_glide = '4.13.1'
         version_moshi = "1.13.0"
         version_retrofit = "2.9.0"
+        version_room = '2.4.3'
     }
     repositories {
         google()
